Clean up the project a bit
Mainly the POMs, that is.

Note that this also updates a few dependencies!